Add support for combining reports in Arrow